(misc) update theme
Signed-off-by: R.I.Pienaar <rip@devco.net>

--- a/docs/themes/hugo-theme-relearn/layouts/alias.html
+++ b/docs/themes/hugo-theme-relearn/layouts/alias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.LanguageCode | default site.Language.Lang | default "en" }}" dir="{{ T "Reading-direction" | default "ltr" }}">
+<html>
   <head>
     {{- $url := replace (replace .Permalink site.BaseURL "/") "//" "/" }}
     {{- $url = partial "relLangPrettyUglyURL.hugo" (dict "link" $url) }}
