--- a/docs/themes/hugo-theme-relearn/static/css/format-print.css
+++ b/docs/themes/hugo-theme-relearn/static/css/format-print.css
@@ -67,7 +67,7 @@ pre {
 #body code, #body strong, #body b,
 #body li, #body dd, #body dt,
 #body p,
-#body a, #body button {
+#body a, #body button, #body .badge .badge-content {
     /* better contrast for colored elements */
     color: black;
 }
